--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   lottie: ^2.7.0
   flutter_staggered_grid_view: ^0.7.0
+  flutter_image_map: ^1.0.1
 
 dev_dependencies:
   flutter_test:
