--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   lottie: ^2.7.0
   flutter_staggered_grid_view: ^0.7.0
   flutter_image_map: ^1.0.1
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
