--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   flutter_image_map: ^1.0.1
   image_picker: ^1.0.4
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
