--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   flutter_image_map: ^1.0.1
   image_picker: ^1.0.4
   google_fonts: ^6.1.0
+  smooth_page_indicator: ^1.1.0
+  go_router: ^12.1.1
+  cached_network_image: ^3.3.0
+  font_awesome_flutter: ^10.6.0
 
 dev_dependencies:
   flutter_test:
