--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   go_router: ^12.1.1
   cached_network_image: ^3.3.0
   font_awesome_flutter: ^10.6.0
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
