Calendario en es_ES

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cached_network_image: ^3.3.0
   font_awesome_flutter: ^10.6.0
   table_calendar: ^3.0.9
+  flutter_localization: ^0.1.14
 
 dev_dependencies:
   flutter_test:
