--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   table_calendar: ^3.0.9
   flutter_localization: ^0.1.14
+  intl: ^0.18.1
+
 
 dev_dependencies:
   flutter_test:
