--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   table_calendar: ^3.0.9
   flutter_localization: ^0.1.14
   intl: ^0.18.1
+  url_launcher: ^6.2.2
 
 
 dev_dependencies:
